# InStream

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: pyproject.toml
apps/api/instream_api/: celery_client.py  deps.py  main.py
apps/api/instream_api/routers/: analytics.py  auth.py  destinations.py  documents.py  emails.py  health.py  inboxes.py  rules.py  tenants.py  workflow_runs.py
apps/dashboard/: package.json  tailwind.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/analytics/: page.tsx
apps/dashboard/app/review-queue/: page.tsx
apps/dashboard/app/rules/: page.tsx
apps/dashboard/components/: nav.tsx
apps/dashboard/components/ui/: badge.tsx  card.tsx
apps/worker/: pyproject.toml
apps/worker/instream_worker/: celery_app.py  pipeline.py  tasks.py
customer_packs/_template/: pack.yaml
customer_packs/_template/mappings/: bank_statement.yaml
customer_packs/_template/prompts/: summarize_bank_statement.yaml
customer_packs/_template/rules/: example_rule.yaml
customer_packs/_template/templates/: missing_document.txt
customer_packs/_template/workflows/: example_workflow.yaml
infra/: docker-compose.yml
scripts/: dev_up.sh  run_api.sh  run_worker.sh  seed.py
tests/unit/: test_confidence_engine.py  test_connectors.py  test_destinations.py  test_ingestion.py  test_ocr_ai_mocks.py  test_rules_engine.py  test_workflow_engine.py
