[project]
name = "instream-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "celery>=5.3",
    "redis>=5.0",
    "pyyaml>=6.0",
    "instream-shared",
    "instream-db",
    "instream-auth",
    "instream-rules",
    "instream-workflow",
    "instream-confidence",
    "instream-audit",
    "instream-analytics",
    "instream-destinations",
    "instream-connectors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["instream_api"]
