[project]
name = "instream-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "instream-shared",
    "instream-db",
    "instream-connectors",
    "instream-ingestion",
    "instream-ocr",
    "instream-ai",
    "instream-rules",
    "instream-workflow",
    "instream-confidence",
    "instream-audit",
    "instream-destinations",
    "instream-notifications",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["instream_worker"]
